--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class = "nav-header"> 
         <h2 style="color: white;">台灣無家者送愛整合平臺</h2>
         <div class="header-r">
-            <button>中</button>
-            <button>英</button>
+            <button class = "btn-lan">中</button>
+            <button class = "btn-lan">英</button>
             <div class="search-box">
                 <input type="text" placeholder="Search" class="search-input">
                 <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
@@ -22,22 +22,26 @@
     </div>
     <!--nav-content-->
     <div class = "nav-content">
-        <img src="img/img_index/Home.png" alt="Home Icon" class="home-icon">
-        <button>我要送愛</button>
-        <button>關於我們</button>
-        <button>更多故事</button>
-        <button>常見問題</button>
-        <button>用戶登入/註冊</button>
+        <img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;">
+        <button class = btn-catalog>我要送愛</button>
+        <button class = btn-catalog>關於我們</button>
+        <button class = btn-catalog>更多故事</button>
+        <button class = btn-catalog>常見問題</button>
+        <button class = btn-catalog>用戶登入/註冊</button>
     </div>
     <!--bigpic-->
     <div class = "bigpic">
         <img src="img/img_index/Homeless.png" alt="Homeless" class="homeless">
-        <h5>在生活之中，常常能看到滿街遍布的流浪之人，</h5>
-        <h5>送愛之人為此產生，親自來到他們的聚集地給予溫暖，</h5>
-        <h5>然而，各團體之間尚無互相協調送餐時間，常有重複送餐或整天無餐的狀況。</h5>
-        <h5>為此，團隊創立了第一個「全國性」無家者送愛整合平台。</h5>
-        <h5>不僅整合了送餐時間/量，也建立相關資訊供人檢索。</h5>
-        <h5>讓流浪者能取其所需，送愛者能送到他們的痛點。</h5>
+        <div class = "bigpic-l">
+            <h5 class = "bigpic-c">在生活之中，常常能看到滿街遍布的流浪之人，</h5>
+            <h5 class = "bigpic-c">送愛之人為此產生，親自來到他們的聚集地給予溫暖，</h5>
+            <h5 class = "bigpic-c">然而，各團體之間尚無互相協調送餐時間，常有重複送餐或整天無餐的狀況。</h5>
+        </div>
+        <div class = "bigpic-r">
+            <h5 class = "bigpic-c">為此，團隊創立了第一個「全國性」無家者送愛整合平台。</h5>
+            <h5 class = "bigpic-c">不僅整合了送餐時間/量，也建立相關資訊供人檢索。</h5>
+            <h5 class = "bigpic-c">讓流浪者能取其所需，送愛者能送到他們的痛點。</h5>
+        </div>
     </div>
     <!--purpose-->
     <div class = "purpose">
