--- a/aboutAs.html
+++ b/aboutAs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./css/aboutAs.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="google" content="notranslate">
 </head>
 
@@ -24,7 +24,7 @@
         <div class="area_est">
         <img class="img_est" src="img/img_about/Establishment_background.png">
             <div class="word_est">
-            <h class="tit_est">成立背景</h>
+            <h2 class="tit_est">成立背景</h2>
             <p class="intro_est">
                 113學年度上學期，我們在「多媒體概論」這門課程當中，意外了解到無家者所面臨的困境，這讓我們開始思考如何以微小的力
                 量提供這群無家可歸的人們一些幫助。隨著我們更深入的了解及研究無家者們的日常生活及需求，最終我們決定架設此網站，讓
@@ -36,7 +36,7 @@
 
         <div class="area_book">
             <div class="word_book">
-                <h class="tit_book">參考書籍</h>
+                <h2 class="tit_book">參考書籍</h2>
                 <p class="intro_book">
                     人生百味的「街頭生存指南」，此書籍改變了很多我們原先對於無家者的看法，尤其是這本書的slogan「就算身無分文，我們仍
                     有生存之道」深深觸動了我們，讓我們看見生命的頑強與對抗命運不公的毅力，於是我們大量參考了這本書，製作成了下方的影
@@ -51,7 +51,7 @@
                 <iframe width="478" height="268" src="https://www.youtube.com/embed/m1_yrlLXRcg?si=_cCsBsyjd_r3IMfa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="word_video">
-                <h class="tit_video">介紹影片</h>
+                <h2 class="tit_video">介紹影片</h2>
                 <p class="intro_video">
                     此影片為我們在「多媒體概論」課程中與其餘兩位小組成員共同製作的期中專題。
                 </p>
