finish about us

--- a/aboutAs.html
+++ b/aboutAs.html
@@ -58,9 +58,24 @@
             </div>
         </div>
 
+        <div class="area_cyj">
+            <div class="word_cyj">
+                <h2 class="tit_cyj">團隊成員</h2>
+                <h2 class="tit_cyj_name">趙翊如</h2>
+                <p class="intro_cyj">
+                    負責項目：網站設計/網站架設/影片編劇<br>
+                    開始動機：比基尼好看不好看<br>
+                    就讀校系：國立台北教育大學 | 數位科技設計系<br>
+                    喜歡的人：劉恩伶<br>
+                    聯絡資訊：s111219007@stu.ntue.edu.tw<br>
+                </p>
+            </div>
+            <img class="img_cyj" src="img/img_about/pic_cyj.png">
+        </div>
 
+        <footer>
 
-
+        </footer>
 
     </div>
 </body>
