update about us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About As</title>
-    <link rel="stylesheet" type="text/css" href="./css/aboutAs.css">
+    <link rel="stylesheet" type="text/css" href="./css/aboutUs.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -58,11 +58,12 @@
             </div>
         </div>
 
-        <div class="area_cyj">
-            <div class="word_cyj">
-                <h2 class="tit_cyj">團隊成員</h2>
-                <h2 class="tit_cyj_name">趙翊如</h2>
-                <p class="intro_cyj">
+        <div class="area_2member">
+        <div class="area_mem area_cyj">
+            <div class="word_mem">
+                <h2 class="tit_mem">團隊成員</h2>
+                <h2 class="tit_mem_name">趙翊如</h2>
+                <p class="intro_mem">
                     負責項目：網站設計/網站架設/影片編劇<br>
                     開始動機：比基尼好看不好看<br>
                     就讀校系：國立台北教育大學 | 數位科技設計系<br>
@@ -70,14 +71,32 @@
                     聯絡資訊：s111219007@stu.ntue.edu.tw<br>
                 </p>
             </div>
-            <img class="img_cyj" src="img/img_about/pic_cyj.png">
+            <img class="img_mem_cyj" src="img/img_about/pic_cyj.png">
         </div>
 
-        <footer>
+        <div class="area_mem area_whj">
+            <div class="word_mem">
+                <h2 class="tit_mem">團隊成員</h2>
+                <h2 class="tit_mem_name">吳函蓁</h2>
+                <p class="intro_mem">
+                    負責項目：網站設計/網站架設/影片剪輯<br>
+                    開始動機：抽菸有害健康<br>
+                    就讀校系：國立台北教育大學 | 數位科技設計系<br>
+                    喜歡的人：劉恩伶<br>
+                    聯絡資訊：s111219005@stu.ntue.edu.tw<br>
+                </p>
+            </div>
+            <img class="img_mem_tobey" src="img/img_about/tobey.png">
+        </div>
+        </div>
 
-        </footer>
+        <!-- 照一如加油 -->
+        <footer></footer>
+        <!-- 照一如加油 -->
 
     </div>
+
+    <script src="/js/AboutUs.js"></script>
 </body>
 
 </html>
