--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>台灣無家者送愛整合平臺</title>
     <link href="https://necolas.github.io/normalize.css/" rel="stylesheet" type="text/css" />
     <link href="CSS/index.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <!--nav-header-->
     <div class = "nav-header"> 
-        <h2 style="color: white;">台灣無家者送愛整合平臺</h2>
+        <h2>台灣無家者送愛整合平臺</h2>
         <div class="header-r">
             <button class = "btn-lan">中</button>
             <button class = "btn-lan">英</button>
@@ -45,31 +49,37 @@
     </div>
     <!--purpose-->
     <div class = "purpose">
-        <h2>平臺宗旨</h2>
-        <div class = "giver">
-            <h2>送愛者</h2>
-            <img src="img/img_index/Lefthand.png" alt="Lefthand" class="lefthand">
-            <h4>▪️真正送到無家者的痛點</h4>
-            <h4>▪️更好規劃送餐時間及地點</h4>
-            <h4>▪️避免食物/資源浪費</h4>
-        </div>
-        <div class = "taker">
-            <h2>無家者</h2>
-            <img src="img/img_index/Righthand.png" alt="Righthand" class="righthand">
-            <h4>▪️取餐不再靠運氣</h4>
-            <h4>▪️收到當季真正需要的物品</h4>
-            <h4>▪️取餐資訊即時查詢</h4>
+        <h2 class = "purpose-h">平臺宗旨</h2>
+        <div class = purpose-c>
+            <div class = "giver">
+                <h2 class = "giver-h">送愛者</h2>
+                <img src="img/img_index/Lefthand.png" alt="Lefthand" class="lefthand">
+                <div class = "giver-c">
+                    <h4>▪️真正送到無家者的痛點</h4>
+                    <h4>▪️更好規劃送餐時間及地點</h4>
+                    <h4>▪️避免食物/資源浪費</h4>
+                </div>
+            </div>
+            <div class = "taker">
+                <h2 class = "taker-h">無家者</h2>
+                <img src="img/img_index/Righthand.png" alt="Righthand" class="righthand">
+                <div class = "taker-c">
+                    <h4>▪️取餐不再靠運氣</h4>
+                    <h4>▪️收到當季真正需要的物品</h4>
+                    <h4>▪️取餐資訊即時查詢</h4>
+                </div>
+            </div>
         </div>
     </div>
     <!--dohow-->
     <div class = "dohow">
         <!--do-->
-        <h2>我可以做什麼？</h2>
-        <div class = "button-container">
-            <button>春季</button>
-            <button>夏季</button>
-            <button>秋季</button>
-            <button>冬季</button>
+        <h2 class = "do-h">我可以給什麼？</h2>
+        <div class = "season">
+            <div class = "btn-season">春季</div>
+            <div class = "btn-season">夏季</div>
+            <div class = "btn-season">秋季</div>
+            <div class = "btn-season">冬季</div>
         </div>
         <!--spring-->
         <div class = "spring">
