--- a/moreStory.html
+++ b/moreStory.html
@@ -21,9 +21,68 @@
         <!-- 趙一如加油 -->
         
         <div class="main_contain">
-        <h1 class="btn btn_send">送愛者</h1>
-        <h1 class="btn btn_homeless">無家者</h1>
+            <div class="btn_both">
+                <h1 class="btn btn_send">送愛者</h1>
+                <h1 class="btn btn_homeless">無家者</h1>
+            </div>
+            <div class="area_main">
+                <ul class="area_left">
+                    <li class="left_word">石頭湯計畫</li>
+                    <li class="left_word">遊民外展服務</li>
+                    <li class="left_word">安心家園</li>
+                    <li>街友販售計畫</li>
+                </ul>
+                <hr class="line">
 
+            <div class="area_intro">
+                <div class="intro1">
+                    <div class="area_tit" id="tit1">
+                        <h2 class="intro_tit">石頭湯計畫</h2>
+                        <a class="intro_name">人生百味</a>
+                    </div>
+                    <p class="intro_word1">
+                        「人生百味」是一個關注無家者的社會團體，他們發起了「石頭湯計畫」，邀請志願者與無家者共同煮湯、用餐，
+                        並藉此建立關係，提供情感支持。這個計畫不僅讓無家者感受到社會的關懷，也促使志願者更深入了解無家者的生
+                        活境況。
+                    </p>
+                    <img class="intro_img" src="/img/img_story/石頭湯.png">
+                </div>
+                <div class="intro2">
+                    <div class="area_tit" id="tit2">
+                        <h2 class="intro_tit">遊民外展服務</h2>
+                        <a class="intro_name">芒草心慈善協會</a>
+                    </div>
+                    <p class="intro_word2">
+                        「芒草心慈善協會」長期致力於服務無家者，他們的外展服務團隊定期深入街頭，為無家者提供食物、衣物和生活用
+                        品，並協助他們尋找工作機會，提供職業訓練，幫助其重新融入社會。
+                    </p>
+                    <img class="intro_img" src="/img/img_story/遊民外展.png">
+                </div>
+                <div class="intro2">
+                    <div class="area_tit" id="tit3">
+                        <h2 class="intro_tit">安心家園</h2>
+                        <a class="intro_name">撒瑪黎雅婦女關懷協會</a>
+                    </div>
+                    <p class="intro_word2">
+                        位於台中的「撒瑪黎雅婦女關懷協會」專門服務女性無家者，提供住宿、用餐、洗澡等基本生活需求，並提供心理輔導
+                        和職業訓練，協助她們重建生活。
+                    </p>
+                    <img class="intro_img" src="/img/img_story/安心家園.png">
+                </div>
+                <div class="intro2">
+                    <div class="area_tit" id="tit4">
+                        <h2 class="intro_tit">街友販售計畫</h2>
+                        <a class="intro_name">大誌雜誌</a>
+                    </div>
+                    <p class="intro_word2">
+                        大誌」是一個由無家者販售的雜誌，每本售價100元，無家者可獲得其中的50元。這個計畫提供了無家者一個合法且有尊
+                        嚴的收入來源，並讓社會大眾有機會透過購買雜誌來支持他們。
+                    </p>
+                    <img class="intro_img" src="/img/img_story/街友販售.png">
+                </div>
+            </div><!-- area_intro -->
+
+            </div><!-- area_main -->
         </div>   
 
 
