update left send

--- a/moreStory.html
+++ b/moreStory.html
@@ -26,7 +26,7 @@
                 <h1 class="btn btn_homeless" onclick="showArea('area_main2')">無家者</h1>
             </div>
 
-            <div id="area_main" class="area_main active">
+            <div id="area_main" class="area_main active main">
                 <ul class="area_left">
                     <li id="left1" class="left_word left">石頭湯計畫
                         <div class="left_line left_line_blue" ></div>
@@ -88,7 +88,7 @@
 
             </div><!-- area_main -->
             
-            <div id="area_main2" class="area_main2">
+            <div id="area_main2" class="area_main2 main">
                 <ul class="area_left2">
                     <li id="left_hl1" class="left_word left">家暴與財務困難
                         <div class="left_line left_line_white" ></div>
