moreStory fade in

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="area_book word_fade">
-            <div class="word_book animate__animated animate__fadeIn">
+            <div class="word_book">
                 <h2 class="tit_book">參考書籍</h2>
                 <p class="intro_book">
                     人生百味的「街頭生存指南」，此書籍改變了很多我們原先對於無家者的看法，尤其是這本書的slogan「就算身無分文，我們仍
@@ -52,7 +52,7 @@
             <div class="video">
                 <iframe width="478" height="268" src="https://www.youtube.com/embed/m1_yrlLXRcg?si=_cCsBsyjd_r3IMfa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <div class="word_video animate__animated animate__fadeIn">
+            <div class="word_video">
                 <h2 class="tit_video">介紹影片</h2>
                 <p class="intro_video">
                     此影片為我們在「多媒體概論」課程中與其餘兩位小組成員共同製作的期中專題。
