--- a/moreStory.html
+++ b/moreStory.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="google" content="notranslate">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="contain">
@@ -54,7 +55,7 @@
                     </p>
                     <img class="intro_img" src="/img/img_story/石頭湯.png">
                 </div>
-                <div id="send2" class="intro2">
+                <div id="send2" class="intro2 fade">
                     <div class="area_tit" id="tit2">
                         <h2 class="intro_tit">遊民外展服務</h2>
                         <a class="intro_name">芒草心慈善協會</a>
@@ -64,7 +65,7 @@
                     </p>
                     <img class="intro_img" src="/img/img_story/遊民外展.png">
                 </div>
-                <div id="send3" class="intro2">
+                <div id="send3" class="intro2 fade">
                     <div class="area_tit" id="tit3">
                         <h2 class="intro_tit">安心家園</h2>
                         <a class="intro_name">撒瑪黎雅婦女關懷協會</a>
@@ -74,7 +75,7 @@
                     </p>
                     <img class="intro_img" src="/img/img_story/安心家園.png">
                 </div>
-                <div id="send4" class="intro2">
+                <div id="send4" class="intro2 fade">
                     <div class="area_tit" id="tit4">
                         <h2 class="intro_tit">街友販售計畫</h2>
                         <a class="intro_name">大誌雜誌</a>
@@ -113,21 +114,21 @@
                     </p>
                     <img class="intro_img" src="/img/img_story/家暴.png">
                 </div>
-                <div id="homeless2" class="intro_hl2">
+                <div id="homeless2" class="intro_hl2 fade2">
                     <h2 class="intro_tit" id="tit_hl2">生意失敗與高利貸</h2>
                     <p class="intro_hl_word2">
                         阿強（化名）曾經是小企業的經營者，但因市場變遷、投資失利，生意慘賠。他為了補上虧損，不得已向地下錢莊借款，導致負債累累，最終無法還清債務。債務壓力使得他與家人關係緊張，家人不願再接納他。他被迫離家，開始在桃園車站附近的公園棲身，靠拾荒為生。
                     </p>
                     <img class="intro_img" src="/img/img_story/生意失敗.png">
                 </div>
-                <div id="homeless3" class="intro_hl3">
+                <div id="homeless3" class="intro_hl3 fade2">
                     <h2 class="intro_tit" id="tit_hl3">婚姻破裂與心理健康</h2>
                     <p class="intro_hl_word3">
                         阿強（化名）曾經是小企業的經營者，但因市場變遷、投資失利，生意慘賠。他為了補上虧損，不得已向地下錢莊借款，導致負債累累，最終無法還清債務。債務壓力使得他與家人關係緊張，家人不願再接納他。他被迫離家，開始在桃園車站附近的公園棲身，靠拾荒為生。
                     </p>
                     <img class="intro_img" src="/img/img_story/婚姻破裂.png">
                 </div>
-                <div id="homeless4" class="intro_hl3">
+                <div id="homeless4" class="intro_hl3 fade2">
                     <h2 class="intro_tit" id="tit_hl4">高齡勞工與退休無保障</h2>
                     <p class="intro_hl_word3">
                         老李（化名）是一位年近70的老年人，年輕時從事體力勞動工作，沒有退休金。年老體弱後，他的工作機會逐漸減少，健康也逐漸下滑，最後失去了工作能力。老李因無法繼續負擔生活開銷，無力支付房租，被迫成為無家可歸者。他平時在台北車站附近找尋臨時工作，但年紀大、體力不足，生活日益艱難。
