--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <!--nav-content-->
         <div class="nav-content">
-            <img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;">
+            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a>
             <button class=btn-catalog>我要送愛</button>
             <a href="aboutUs.html"><button class=btn-catalog>關於我們</button></a>
             <a href="moreStory.html"><button class=btn-catalog>更多故事</button></a>
