--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,12 +16,27 @@
 <body>
     <div class="contain">
         
-    <!-- 趙一如加油 -->
-    <div class="header">
+    <!--nav-header-->
+    <div class="nav-header">
+        <h2>台灣無家者送愛整合平臺</h2>
+        <div class="header-r">
+            <button class="btn-lan">中</button>
+            <button class="btn-lan">英</button>
+            <div class="search-box">
+                <input type="text" placeholder="Search" class="search-input">
+                <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
+            </div>
+        </div>
     </div>
-    <div class="nav">
+    <!--nav-content-->
+    <div class="nav-content">
+        <a href="index.html"></a><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;">
+        <button class=btn-catalog>我要送愛</button>
+        <a href="aboutUs.html"><button class=btn-catalog>關於我們</button></a>
+        <a href="moreStory.html"><button class=btn-catalog>更多故事</button></a>
+        <button class=btn-catalog>常見問題</button>
+        <button class=btn-catalog>用戶登入/註冊</button>
     </div>
-    <!-- 趙一如加油 -->
 
     <div class="main_contain">
         <div class="area_est">
@@ -29,10 +44,7 @@
             <div class="word_est animate__animated animate__fadeInLeft">
             <h2 class="tit_est">成立背景</h2>
             <p class="intro_est">
-                113學年度上學期，我們在「多媒體概論」這門課程當中，意外了解到無家者所面臨的困境，這讓我們開始思考如何以微小的力
-                量提供這群無家可歸的人們一些幫助。隨著我們更深入的了解及研究無家者們的日常生活及需求，最終我們決定架設此網站，讓
-                人們能夠透過網路更加了解無家者的生活挑戰，同時提供資源以及協助，讓有意願的民眾能夠參與關懷、捐款或志願服務。希望
-                這個網站能成為一個橋樑，串聯社會的愛心與需要幫助的無家者們，達到讓世界變得更美好的宏願。
+                113學年度上學期，我們在「多媒體概論」這門課程當中，意外了解到無家者所面臨的困境，這讓我們開始思考如何以微小的力量提供這群無家可歸的人們一些幫助。隨著我們更深入的了解及研究無家者們的日常生活及需求，最終我們決定架設此網站，讓人們能夠透過網路更加了解無家者的生活挑戰，同時提供資源以及協助，讓有意願的民眾能夠參與關懷、捐款或志願服務。希望這個網站能成為一個橋樑，串聯社會的愛心與需要幫助的無家者們，達到讓世界變得更美好的宏願。
             </p>
             </div>
         </div>
@@ -41,9 +53,7 @@
             <div class="word_book">
                 <h2 class="tit_book">參考書籍</h2>
                 <p class="intro_book">
-                    人生百味的「街頭生存指南」，此書籍改變了很多我們原先對於無家者的看法，尤其是這本書的slogan「就算身無分文，我們仍
-                    有生存之道」深深觸動了我們，讓我們看見生命的頑強與對抗命運不公的毅力，於是我們大量參考了這本書，製作成了下方的影
-                    片，也希望大家看完後能更了解無家者的生活，以及提升各位對於此書的興趣。
+                    人生百味的「街頭生存指南」，此書籍改變了很多我們原先對於無家者的看法，尤其是這本書的slogan「就算身無分文，我們仍有生存之道」深深觸動了我們，讓我們看見生命的頑強與對抗命運不公的毅力，於是我們大量參考了這本書，製作成了下方的影片，也希望大家看完後能更了解無家者的生活，以及提升各位對於此書的興趣。
                 </p>
             </div>
             <img class="img_book" src="img/img_about/book.png">
