--- a/moreStory.html
+++ b/moreStory.html
@@ -29,7 +29,7 @@
         </div>
         <!--nav-content-->
         <div class="nav-content">
-            <a href="index.html"></a><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;">
+            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a>
             <button class=btn-catalog>我要送愛</button>
             <a href="aboutUs.html"><button class=btn-catalog>關於我們</button></a>
             <a href="moreStory.html"><button class=btn-catalog>更多故事</button></a>
