--- a/moreStory.html
+++ b/moreStory.html
@@ -153,11 +153,9 @@
                 </div>
             </div><!-- area_intro -->
             </div><!-- area_main -->
-
             <div class="spacer"></div>
-        </div>   
+        </div>   <!-- main_contain -->
 
-        <!-- 照一如加油 -->
         <div class="footer">
             <div class = "footer-top">
                 <div class="left">
@@ -193,9 +191,8 @@
             <div class = "footer-bottom">
                 <hr class = "footer-hr">
                 <p class = "footer-p">2024 produced by Yi-Ju, Chao & Han-Jhen, Wu</p>
-            </div class = "footer-bottom">
+            </div>
         </div>
-        <!-- 照一如加油 -->
 
     </div>
 
