--- a/moreStory.html
+++ b/moreStory.html
@@ -16,6 +16,7 @@
     <div class="contain">
         
         <!--nav-header-->
+    <div class = "fixed">
         <div class="nav-header">
             <h2>台灣無家者送愛整合平臺</h2>
             <div class="header-r">
@@ -36,6 +37,7 @@
             <button class=btn-catalog>常見問題</button>
             <button class=btn-catalog>用戶登入/註冊</button>
         </div>
+    </div>
         
         <div class="main_contain">
             <div class="btn_both">
