--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,25 +17,27 @@
     <div class="contain">
         
     <!--nav-header-->
-    <div class="nav-header">
-        <h2>台灣無家者送愛整合平臺</h2>
-        <div class="header-r">
-            <button class="btn-lan">中</button>
-            <button class="btn-lan">英</button>
-            <div class="search-box">
-                <input type="text" placeholder="Search" class="search-input">
-                <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
+    <div class = "fixed">
+        <div class="nav-header">
+            <h2>台灣無家者送愛整合平臺</h2>
+            <div class="header-r">
+                <button class="btn-lan">中</button>
+                <button class="btn-lan">英</button>
+                <div class="search-box">
+                    <input type="text" placeholder="Search" class="search-input">
+                    <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
+                </div>
             </div>
         </div>
-    </div>
-    <!--nav-content-->
-    <div class="nav-content">
-        <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a>
-        <button class=btn-catalog>我要送愛</button>
-        <a href="aboutUs.html"><button class=btn-catalog>關於我們</button></a>
-        <a href="moreStory.html"><button class=btn-catalog>更多故事</button></a>
-        <button class=btn-catalog>常見問題</button>
-        <button class=btn-catalog>用戶登入/註冊</button>
+        <!--nav-content-->
+        <div class="nav-content">
+            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a>
+            <button class=btn-catalog>我要送愛</button>
+            <a href="aboutUs.html"><button class=btn-catalog>關於我們</button></a>
+            <a href="moreStory.html"><button class=btn-catalog>更多故事</button></a>
+            <button class=btn-catalog>常見問題</button>
+            <button class=btn-catalog>用戶登入/註冊</button>
+        </div>
     </div>
 
     <div class="main_contain">
