--- a/aboutUs.html
+++ b/aboutUs.html
@@ -45,7 +45,7 @@
             <img class="img_est" src="img/img_about/Establishment_background.png">
                 <div class="word_est animate__animated animate__fadeInLeft">
                     <h2 class="tit_est">成立背景</h2>
-                    <p class="intro_est">
+                    <p class="intro_est intro_word">
                         113學年度上學期，我們在「多媒體概論」這門課程當中，意外了解到無家者所面臨的困境，這讓我們開始思考如何以微小的力量提供這群無家可歸的人們一些幫助。隨著我們更深入的了解及研究無家者們的日常生活及需求，最終我們決定架設此網站，讓人們能夠透過網路更加了解無家者的生活挑戰，同時提供資源以及協助，讓有意願的民眾能夠參與關懷、捐款或志願服務。希望這個網站能成為一個橋樑，串聯社會的愛心與需要幫助的無家者們，達到讓世界變得更美好的宏願。
                     </p>
                 </div>
@@ -54,7 +54,7 @@
         <div class="area_book word_fade">
             <div class="word_book">
                 <h2 class="tit_book">參考書籍</h2>
-                <p class="intro_book">
+                <p class="intro_book intro_word">
                     人生百味的「街頭生存指南」，此書籍改變了很多我們原先對於無家者的看法，尤其是這本書的slogan「就算身無分文，我們仍有生存之道」深深觸動了我們，讓我們看見生命的頑強與對抗命運不公的毅力，於是我們大量參考了這本書，製作成了下方的影片，也希望大家看完後能更了解無家者的生活，以及提升各位對於此書的興趣。
                 </p>
             </div>
@@ -67,7 +67,7 @@
             </div>
             <div class="word_video">
                 <h2 class="tit_video">介紹影片</h2>
-                <p class="intro_video">
+                <p class="intro_video intro_word">
                     此影片為我們在「多媒體概論」課程中與其餘兩位小組成員共同製作的期中專題。
                 </p>
             </div>
@@ -78,7 +78,7 @@
                 <div class="word_mem">
                     <h2 class="tit_mem">團隊成員</h2>
                     <h2 class="tit_mem_name">趙翊如</h2>
-                    <p class="intro_mem">
+                    <p class="intro_mem intro_word">
                         負責項目：網站設計/網站架設/影片編劇<br>
                         開始動機：比基尼好看不好看<br>
                         就讀校系：國立台北教育大學 | 數位科技設計系<br>
@@ -93,7 +93,7 @@
                 <div class="word_mem">
                     <h2 class="tit_mem">團隊成員</h2>
                     <h2 class="tit_mem_name">吳函蓁</h2>
-                    <p class="intro_mem">
+                    <p class="intro_mem intro_word">
                         負責項目：網站設計/網站架設/影片剪輯<br>
                         開始動機：抽菸有害健康<br>
                         就讀校系：國立台北教育大學 | 數位科技設計系<br>
