--- a/moreStory.html
+++ b/moreStory.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More Story</title>
-    <link rel="stylesheet" type="text/css" href="./css/moreStory.css">
-    <link rel="stylesheet" type="text/css" href="./css/basic.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/moreStory.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/basic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -198,6 +198,6 @@
 
     </div>
 
-    <script src="/js/moreStory.js"></script>
+    <script src="js/moreStory.js"></script>
 </body>
 </html>
