--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>台灣無家者送愛整合平臺</title>
     <link href="https://necolas.github.io/normalize.css/" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="/CSS/index.css" rel="stylesheet" type="text/css" />
+    <link href="CSS/index.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
