--- a/moreStory.html
+++ b/moreStory.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More Story</title>
-    <link rel="stylesheet" type="text/css" href="/CSS/moreStory.css">
-    <link rel="stylesheet" type="text/css" href="/CSS/basic.css">
+    <link rel="stylesheet" type="text/css" href="CSS/moreStory.css">
+    <link rel="stylesheet" type="text/css" href="CSS/basic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -71,7 +71,7 @@
                     <p class="intro_word1">
                         「人生百味」是一個關注無家者的社會團體，他們發起了「石頭湯計畫」，邀請志願者與無家者共同煮湯、用餐，並藉此建立關係，提供情感支持。這個計畫不僅讓無家者感受到社會的關懷，也促使志願者更深入了解無家者的生活境況。
                     </p>
-                    <img class="intro_img" src="/img/img_story/石頭湯.png">
+                    <img class="intro_img" src="img/img_story/石頭湯.png">
                 </div>
                 <div id="send2" class="intro2 fade">
                     <div class="area_tit" id="tit2">
@@ -81,7 +81,7 @@
                     <p class="intro_word2">
                         「芒草心慈善協會」長期致力於服務無家者，他們的外展服務團隊定期深入街頭，為無家者提供食物、衣物和生活用品，並協助他們尋找工作機會，提供職業訓練，幫助其重新融入社會。
                     </p>
-                    <img class="intro_img" src="/img/img_story/遊民外展.png">
+                    <img class="intro_img" src="img/img_story/遊民外展.png">
                 </div>
                 <div id="send3" class="intro2 fade">
                     <div class="area_tit" id="tit3">
@@ -91,7 +91,7 @@
                     <p class="intro_word2">
                         位於台中的「撒瑪黎雅婦女關懷協會」專門服務女性無家者，提供住宿、用餐、洗澡等基本生活需求，並提供心理輔導和職業訓練，協助她們重建生活。
                     </p>
-                    <img class="intro_img" src="/img/img_story/安心家園.png">
+                    <img class="intro_img" src="img/img_story/安心家園.png">
                 </div>
                 <div id="send4" class="intro2 fade">
                     <div class="area_tit" id="tit4">
@@ -101,7 +101,7 @@
                     <p class="intro_word2">
                         「大誌」是一個由無家者販售的雜誌，每本售價100元，無家者可獲得其中的50元。這個計畫提供了無家者一個合法且有尊嚴的收入來源，並讓社會大眾有機會透過購買雜誌來支持他們。
                     </p>
-                    <img class="intro_img" src="/img/img_story/街友販售.png">
+                    <img class="intro_img" src="img/img_story/街友販售.png">
                 </div>
             </div><!-- area_intro -->
 
@@ -130,28 +130,28 @@
                     <p class="intro_hl_word1">
                         阿雄（化名）是一位原住民中年男子，年輕時在工地打工，收入不高但生活穩定。然而，他的伴侶因家暴問題而離他而去，阿雄陷入失落與憂鬱，後來開始酗酒，工作表現也因此下降。接著他因酒後發生意外，無法再工作，積蓄也耗盡。因為無法償還房貸，阿雄最終失去了家，開始在台北街頭流浪。
                     </p>
-                    <img class="intro_img" src="/img/img_story/家暴.png">
+                    <img class="intro_img" src="img/img_story/家暴.png">
                 </div>
                 <div id="homeless2" class="intro_hl2 fade2">
                     <h2 class="intro_tit" id="tit_hl2">生意失敗與高利貸</h2>
                     <p class="intro_hl_word2">
                         阿強（化名）曾經是小企業的經營者，但因市場變遷、投資失利，生意慘賠。他為了補上虧損，不得已向地下錢莊借款，導致負債累累，最終無法還清債務。債務壓力使得他與家人關係緊張，家人不願再接納他。他被迫離家，開始在桃園車站附近的公園棲身，靠拾荒為生。
                     </p>
-                    <img class="intro_img" src="/img/img_story/生意失敗.png">
+                    <img class="intro_img" src="img/img_story/生意失敗.png">
                 </div>
                 <div id="homeless3" class="intro_hl3 fade2">
                     <h2 class="intro_tit" id="tit_hl3">婚姻破裂與心理健康</h2>
                     <p class="intro_hl_word3">
                         阿強（化名）曾經是小企業的經營者，但因市場變遷、投資失利，生意慘賠。他為了補上虧損，不得已向地下錢莊借款，導致負債累累，最終無法還清債務。債務壓力使得他與家人關係緊張，家人不願再接納他。他被迫離家，開始在桃園車站附近的公園棲身，靠拾荒為生。
                     </p>
-                    <img class="intro_img" src="/img/img_story/婚姻破裂.png">
+                    <img class="intro_img" src="img/img_story/婚姻破裂.png">
                 </div>
                 <div id="homeless4" class="intro_hl3 fade2">
                     <h2 class="intro_tit" id="tit_hl4">高齡勞工與退休無保障</h2>
                     <p class="intro_hl_word3">
                         老李（化名）是一位年近70的老年人，年輕時從事體力勞動工作，沒有退休金。年老體弱後，他的工作機會逐漸減少，健康也逐漸下滑，最後失去了工作能力。老李因無法繼續負擔生活開銷，無力支付房租，被迫成為無家可歸者。他平時在台北車站附近找尋臨時工作，但年紀大、體力不足，生活日益艱難。
                     </p>
-                    <img class="intro_img" src="/img/img_story/高齡勞工.png">
+                    <img class="intro_img" src="img/img_story/高齡勞工.png">
                 </div>
             </div><!-- area_intro -->
             </div><!-- area_main -->
@@ -198,6 +198,6 @@
 
     </div>
 
-    <script src="/js/moreStory.js"></script>
+    <script src="js/moreStory.js"></script>
 </body>
 </html>
