--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             <p class = "footer-p">2024 produced by Yi-Ju, Chao & Han-Jhen, Wu</p>
         </div class = "footer-bottom">
     </div>
-    <script src="/js/Index.js"></script>
+    <script src="js/Index.js"></script>
 </body>
 
 </html>
