--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About As</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/aboutUs.css">
     <link rel="stylesheet" type="text/css" href="CSS/basic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,7 +63,7 @@
 
         <div class="area_video word_fade">
             <div class="video">
-                <iframe width="478" height="268" src="https://www.youtube.com/embed/m1_yrlLXRcg?si=_cCsBsyjd_r3IMfa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="478" height="268" src="https://www.youtube-nocookie.com/embed/m1_yrlLXRcg?si=_cCsBsyjd_r3IMfa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="word_video">
                 <h2 class="tit_video">介紹影片</h2>
