--- a/aboutUs.html
+++ b/aboutUs.html
@@ -148,7 +148,7 @@
     
     </div><!-- contain -->
 
-    <script src="js/aboutUs.js"></script>
+    <script src="js/about.js"></script>
 </body>
 
 </html>
