--- a/aboutUs.html
+++ b/aboutUs.html
@@ -148,7 +148,9 @@
     
     </div><!-- contain -->
 
-    <script src="js/about.js"></script>
+    <script src="js/about.js">
+        console.log("內聯 JavaScript 測試");
+    </script>
 </body>
 
 </html>
