--- a/aboutUs.html
+++ b/aboutUs.html
@@ -63,7 +63,7 @@
 
         <div class="area_video word_fade">
             <div class="video">
-                <iframe src="https://www.youtube-nocookie.com/embed/m1_yrlLXRcg?si=f3jXQHVYuZ-yKGID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="478px" height="268px" src="https://www.youtube-nocookie.com/embed/m1_yrlLXRcg?si=f3jXQHVYuZ-yKGID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="word_video">
                 <h2 class="tit_video">介紹影片</h2>
