--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <meta name="google" content="notranslate">
+    <meta name="google" content="notranslate">
+    <link rel="icon" href="img/img_favicon/box.png" type="image/png">
+
 
 </head>
 
