--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台灣無家者送愛整合平臺</title>
-    <link href="https://necolas.github.io/normalize.css/" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="CSS/index.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="CSS/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="google" content="notranslate">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="icon" href="img/img_favicon/box.png" type="image/png">
-
-
 </head>
 
 <body>
     <!--nav-header-->
     <div class = "fixed">
         <div class="nav-header">
-            <h2>台灣無家者送愛整合平臺</h2>
+            <h2 data-zn="台灣無家者送愛整合平臺" data-en="Homeless Care and Meal Coordination Platform">台灣無家者送愛整合平臺</h2>
             <div class="header-r">
                 <button class="btn-lan">中</button>
                 <button class="btn-lan">英</button>
