--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
                 <h2 class="giver-h">送愛者</h2>
                 <img src="img/img_index/Lefthand.png" alt="Lefthand" class="lefthand">
                 <div class="giver-c">
-                    <h4>▪️真正送到無家者的痛點</h4>
-                    <h4>▪️更好規劃送餐時間及地點</h4>
-                    <h4>▪️避免食物/資源浪費</h4>
+                    <h4>▪ 真正送到無家者的痛點</h4>
+                    <h4>▪ 更好規劃送餐時間及地點</h4>
+                    <h4>▪ 避免食物/資源浪費</h4>
                 </div>
             </div>
             <div class="taker">
                 <h2 class="taker-h">無家者</h2>
                 <img src="img/img_index/Righthand.png" alt="Righthand" class="righthand">
                 <div class="taker-c">
-                    <h4>▪️取餐不再靠運氣</h4>
-                    <h4>▪️收到當季真正需要的物品</h4>
-                    <h4>▪️取餐資訊即時查詢</h4>
+                    <h4>▪ 取餐不再靠運氣</h4>
+                    <h4>▪ 收到當季真正需要的物品</h4>
+                    <h4>▪ 取餐資訊即時查詢</h4>
                 </div>
             </div>
         </div>
