--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About As</title>
+    <title>關於我們</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/aboutUs.css">
     <link rel="stylesheet" type="text/css" href="CSS/basic.css">
@@ -24,7 +24,7 @@
             <h2>台灣無家者送愛整合平臺</h2>
             <div class="header-r">
                 <button class="btn-lan">中</button>
-                <button class="btn-lan">英</button>
+                <button class="btn-lan">En</button>
                 <div class="search-box">
                     <input type="text" placeholder="Search" class="search-input">
                     <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
