--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
         </div>
         <!--nav-content-->
         <div class="nav-content">
-            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a>
-            <button class=btn-catalog data-zh="我要送愛" data-en="Donate Suppilies" >我要送愛</button>
-            <a href="aboutUs.html" data-zh="關於我們" data-en="About Us" class=btn-catalog><button class=btn-catalog>關於我們</button></a>
-            <a href="moreStory.html" data-zh="更多故事" data-en="More Stories" class=btn-catalog><button class=btn-catalog>更多故事</button></a>
+            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a><div class="dropdown">
+            <li><a href="#" data-zh="我要送愛" data-en="Donation Suppulies">我要送愛 </a>
+                <ul>
+                    <li><a href="#" data-zh="無家者據點查詢" data-en="Search Homeless Locations">無家者據點查詢</a></li>
+                    <li><a href="#" data-zh="送愛登錄" data-en="Donation Registration">送愛登錄</a></li>
+                    <li><a href="#" data-zh="送愛情形一覽" data-en="Donation Overview">送愛情形一覽</a></li>
+                </ul>
+            </li>
+        </div>
+            <a href="aboutUs.html"  class=a-catalog><button class=btn-catalog data-zh="關於我們" data-en="About Us">關於我們</button></a>
+            <a href="moreStory.html" class=a-catalog><button class=btn-catalog data-zh="更多故事" data-en="More Stories">更多故事</button></a>
             <button class=btn-catalog data-zh="常見問題" data-en="FAQ">常見問題</button>
             <button class=btn-catalog data-zh="用戶登入/註冊" data-en="User Login/Register">用戶登入/註冊</button>
         </div>
@@ -90,7 +97,7 @@
             <div class="btn-season" onclick="changeSeason('spring', this)" data-zh="春季" data-en="Spring">春季</div>
             <div class="btn-season" onclick="changeSeason('summer', this)" data-zh="夏季" data-en="Summer">夏季</div>
             <div class="btn-season" onclick="changeSeason('autumn', this)" data-zh="秋季" data-en="Autumn">秋季</div>
-            <div class="btn-season" onclick="changeSeason('winter', this)" data-zh="冬季" data-en="Winter">秋季>冬季</div>
+            <div class="btn-season" onclick="changeSeason('winter', this)" data-zh="冬季" data-en="Winter">冬季</div>
         </div>
         <div class="season-c">
             <div class="spring-c">
@@ -377,24 +384,24 @@
             </div>
             <div class="middle1">
                 <h3 data-zh="人生百味" data-en="Do You a Flavor">人生百味</h3>
-                <h6 data-zh="官方網站" data-en="Official website">官方網站</h6>
-                <h6 data-zh="專案列表" data-en="Project list">專案列表</h6>
-                <h6 data-zh="議題文章" data-en="Topic articles">議題文章</h6>
-                <h6 data-zh="捐款支持" data-en="Donate to support">捐款支持</h6>
-                <h6 data-zh="街頭生存指南" data-en="Street survival guide">街頭生存指南</h6>
-                <h6 data-zh="無家者小幫手" data-en="Homeless helper">無家者小幫手</h6>
+                <a href="https://doyouaflavor.tw/" target="_blank" class = "footer-a"><h6 data-zh="官方網站" data-en="Official website">官方網站</h6></a> 
+                <a href="https://doyouaflavor.tw/activities/" target="_blank" class = "footer-a"><h6 data-zh="專案列表" data-en="Project list">專案列表</h6></a> 
+                <a href="https://doyouaflavor.tw/blog/" target="_blank" class = "footer-a"><h6 data-zh="議題文章" data-en="Topic articles">議題文章</h6></a> 
+                <a href="https://doyouaflavor.tw/donate/" target="_blank" class = "footer-a"><h6 data-zh="捐款支持" data-en="Donate to support">捐款資訊</h6></a> 
+                <a href="https://www.books.com.tw/products/0010741248?" target="_blank" class = "footer-a"><h6 data-zh="街頭生存指南" data-en="Street survival guide">街頭生存指南</h6></a> 
+                <a href="https://doyouaflavor.tw/homeless-helper/" target="_blank" class = "footer-a"><h6 data-zh="無家者小幫手" data-en="Homeless helper">無家者小幫手</h6></a> 
             </div>
             <div class="middle2">
                 <h3 data-zh="其他" data-en="Others">其他</h3>
-                <h6 data-zh="開發者支持" data-en="Developer support">開發者支持</h6>
-                <h6 data-zh="平臺問題回報" data-en="Platform issue report">平臺問題回報</h6>
-                <h6 data-zh="更多影音作品" data-en="More video content">更多影音作品</h6>
+                <a href="https://www.instagram.com/tiatde/" target="_blank" class = "footer-a"><h6 data-zh="開發者支持" data-en="Developer support">開發者支持</h6></a> 
+                <a href="https://www.instagram.com/tiatde/" target="_blank" class = "footer-a"><h6 data-zh="平臺問題回報" data-en="Platform issue report">平臺問題回報</h6></a> 
+                <a href="https://www.youtube.com/@yijuchao5024" target="_blank" class = "footer-a"><h6 data-zh="更多影音作品" data-en="More video content">更多影音作品</h6></a> 
             </div>
             <div class="right">
                 <h3>FOLLOW</h3>
-                <img src="img/img_index/Instagram.png" alt="Instagram" class="instagram">
-                <img src="img/img_index/Facebook.png" alt="Facebook" class="facebook">
-                <img src="img/img_index/Youtube.png" alt="Youtube" class="youtube">
+                <a href="https://www.instagram.com/tiatde/" target="_blank" class = "footer-a"><img src="img/img_index/Instagram.png" alt="Instagram" class="instagram"></a> 
+                <a href="https://www.facebook.com/profile.php?id=100004458227420" target="_blank" class = "footer-a"><img src="img/img_index/Facebook.png" alt="Facebook" class="facebook"></a> 
+                <a href="https://www.youtube.com/@yijuchao5024" target="_blank" class = "footer-a"><img src="img/img_index/Youtube.png" alt="Youtube" class="youtube"></a> 
             </div>
         </div>
         <div class = "footer-bottom">
