--- a/moreStory.html
+++ b/moreStory.html
@@ -75,6 +75,7 @@
                         「人生百味」是一個關注無家者的社會團體，他們發起了「石頭湯計畫」，邀請志願者與無家者共同煮湯、用餐，並藉此建立關係，提供情感支持。這個計畫不僅讓無家者感受到社會的關懷，也促使志願者更深入了解無家者的生活境況。
                     </p>
                     <img class="intro_img" src="img/img_story/石頭湯.png">
+                    <div class="img_source"><a>圖片來源：「人生百味」官方網站</a></div>
                 </div>
                 <div id="send2" class="intro2 fade">
                     <div class="area_tit" id="tit2">
@@ -85,6 +86,7 @@
                         「芒草心慈善協會」長期致力於服務無家者，他們的外展服務團隊定期深入街頭，為無家者提供食物、衣物和生活用品，並協助他們尋找工作機會，提供職業訓練，幫助其重新融入社會。
                     </p>
                     <img class="intro_img" src="img/img_story/遊民外展.png">
+                    <div class="img_source"><a>圖片來源：「社團法人台灣芒草心慈善協會」粉絲團</a></div>
                 </div>
                 <div id="send3" class="intro2 fade">
                     <div class="area_tit" id="tit3">
@@ -95,6 +97,7 @@
                         位於台中的「撒瑪黎雅婦女關懷協會」專門服務女性無家者，提供住宿、用餐、洗澡等基本生活需求，並提供心理輔導和職業訓練，協助她們重建生活。
                     </p>
                     <img class="intro_img" src="img/img_story/安心家園.png">
+                    <div class="img_source"><a>圖片來源：「慈善撒瑪黎雅婦女關懷協會」官方網站</a></div>
                 </div>
                 <div id="send4" class="intro2 fade">
                     <div class="area_tit" id="tit4">
@@ -105,6 +108,7 @@
                         「大誌」是一個由無家者販售的雜誌，每本售價100元，無家者可獲得其中的50元。這個計畫提供了無家者一個合法且有尊嚴的收入來源，並讓社會大眾有機會透過購買雜誌來支持他們。
                     </p>
                     <img class="intro_img" src="img/img_story/街友販售.png">
+                    <div class="img_source"><a>圖片來源：中時新聞網</a></div>
                 </div>
             </div><!-- area_intro -->
 
