--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#" data-zh="我要送愛" data-en="Donation Suppulies">我要送愛 </a>
                 <ul>
                     <li><a href="#" data-zh="無家者據點查詢" data-en="Search Homeless Locations">無家者據點查詢</a></li>
-                    <li><a href="#" data-zh="送愛登錄" data-en="Donation Registration">送愛登錄</a></li>
+                    <li><a href="donateRegistration.html" data-zh="送愛登錄" data-en="Donate Registration">送愛登錄</a></li>
                     <li><a href="#" data-zh="送愛情形一覽" data-en="Donation Overview">送愛情形一覽</a></li>
                 </ul>
             </li>
